src/styles/styles.scss
@import "src/styles/editor.css";

:where(:root) {
  --page-max-width: 1920px;
  --page-max-width-padding: calc(max(100vw - var(--page-max-width), 0vw) * 0.5);
  --page-safe-left-padding: max(
    var(--page-max-width-padding),
    env(safe-area-inset-left)
  );
  --page-safe-right-padding: max(
    var(--page-max-width-padding),
    env(safe-area-inset-right)
  );

  --root-indent: min(8vw, calc(var(--page-max-width) * 0.08));
  --indent: var(--root-indent);
  --vertical-indent: 0.5;
  --column-gap: calc(var(--indent) * 0.5);
  --gallery-gap: 1rem;
  --text-gap: 2rem;
  --text-gap-small: 1rem;
  --text-size-huge: 46px;
  --text-size-xxlarge: 30px;
  --text-size-xlarge: 22px;
  --text-size-large: 17px;
  --text-size-medium: 15px;
  --text-size-small: 14px;
  --text-size-xsmall: 12px;
  --text-size-xxsmall: 10px;

  --default-font-family: "Open Sans";
  --feature-font-family: var(--default-font-family);
  --bold-font-family: var(--default-font-family);

  --color-primary: 24 58 78;
  --color-accent: 80 167 205;
  --text-color: var(--color-primary);

  --page-background-color: 255 255 255;
  --page-background-shadow: 0 0 0 / 0.3;
  --article-background-color: var(--page-background-color);

  --info-color: 147 205 223;
  --warning-color: 233 205 115;
  --details-color: 128 128 128;
  --error-color: 211 65 65;
}

* {
  box-sizing: border-box;
  margin: 0;
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
  font-family: var(--default-font-family);
  scroll-behavior: smooth;
}

@media screen and (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

body.mobile-nav > header:not(.mobile-logo) + article > main {
  --header-content-offset: 0px;
}

article {
  background-color: rgb(var(--article-background-color));
  min-height: 100vh;
  display: flex;
  flex-direction: column;

  & > main {
    flex: 1 0 100%;
  }

  & > section.footer {
    flex: 0 0 100%;
  }
}

body {
  position: relative;
  background-color: rgb(var(--page-background-color));
}

/* :is(main, article) > section:not(.slider, .image) {
  padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);

  > .component-wrapper {
    margin: 0 var(--page-max-width-padding);
  }
} */

/* main {
  padding-top: var(--header-content-offset, var(--header-height));
} */

main {
  padding-top: var(--header-content-offset, 0px);
}

main > :first-child > .component-wrapper {
  margin-top: calc(var(--header-height) - var(--header-content-offset));
}

main > :first-child:is(.slider) > .component-wrapper {
  margin-top: 0;

  /* .slider-item > section .component-wrapper {
    margin-top: calc(var(--header-height) - var(--header-content-offset));
  } */
}

/* main:has(:is(.image, .slider):first-child) {
  padding-top: var(--header-content-offset);

  > :first-child .glide__arrows {
    top: calc(var(--header-height) - var(--header-content-offset));
  }
} */

[data-component="columns"] {
  padding: 0;
}

[data-component="richtext"] section {
  padding: 0;
}

[data-component="richtext"] .component-wrapper iframe {
  max-width: 100%;
}

.text-content section {
  margin-bottom: var(--column-gap);
}

.text-content section:last-child {
  margin-bottom: 0;
}

section.no-indent {
  padding: 0;

  &-top {
    padding-top: 0;
  }
  &-bottom {
    padding-bottom: 0;
  }
  &-left {
    padding-left: 0;
  }
  &-right {
    padding-right: 0;
  }
}

form {
  label {
    display: block;
    font-size: var(--text-size-small);
    font-family: var(--bold-font-family);
    margin: 0 0 5px;
  }
}

a,
p,
li,
input,
button,
textarea,
label,
select {
  margin: 0;
  line-height: 1.8;
  font-family: var(--default-font-family);
  font-size: var(--text-size-medium);
  color: rgb(var(--text-color));
}

.text-content table {
  line-height: 1.6;
  font-family: var(--default-font-family);
  font-size: var(--text-size-medium);
  margin-bottom: 2em;
  border-collapse: collapse;

  th {
    text-align: right;
    padding-right: 0.5em;
  }

  td {
    text-align: left;
    /* vertical-align: baseline; */
    vertical-align: top;
    padding: calc(var(--indent) * 0.1);

    border: 1px solid rgb(var(--text-color));
  }

  &:not(:has(td[rowspan], td[colspan])) {
    @media only screen and (max-width: 768px) {
      tbody {
        display: flex;
        flex-direction: column;
      }
      tr {
        display: flex;
        flex-direction: column;
        counter-reset: column;
        border-bottom: 1px solid
          color-mix(
            in oklch,
            rgb(var(--background-color)) 90%,
            rgb(var(--text-color))
          );

        &:last-child {
          border-bottom: 0;
        }

        td {
          position: relative;
          margin-left: 2rem;
        }

        td > :is(p, h1, h2, h3, h4, h5, h6):first-child::before,
        td:not(:has(:is(p, h1, h2, h3, h4, h5, h6):first-child))::before {
          position: absolute;
          content: counter(column) ".";
          counter-increment: column;
          opacity: 0.5;
          line-height: inherit;
          vertical-align: baseline;
          left: -1.5rem;
        }
      }
    }

    tr:nth-child(even) {
      background-color: color-mix(
        in oklch,
        rgb(var(--background-color)) 95%,
        rgb(var(--text-color))
      );
    }
  }
}

:where(h1, h2, h3, h4, h5, h6) {
  margin: 0;
  margin-bottom: 0.4em;
  line-height: 1.4;
  font-family: var(--default-font-family);
  text-wrap: balance;
}

@for $i from 1 through 6 {
  :where(h#{$i}) {
    color: rgb(var(--h#{$i}-color, var(--heading-color)));
  }
}

:is(p, ul, ol, h1, h2, h3, h4, h5, h6):first-child {
  margin-top: 0;
}

:is(p, ul, ol, h1, h2, h3, h4, h5, h6, table):last-child {
  margin-bottom: 0;
}

:where(h1, h2, h3) {
  font-family: var(--feature-font-family);
}

:where(h1) {
  font-size: var(--text-size-xxlarge);
}

:where(h2) {
  font-size: var(--text-size-xlarge);
}

:where(h3) {
  font-size: var(--text-size-large);
}

a,
td,
th {
  color: rgb(var(--text-color));
}

p {
  margin-bottom: 1.6rem;

  &:last-child {
    margin-bottom: 0;
  }
}

h2 + :is(ul, ol) {
  margin-top: 2rem;
}

ul,
ol {
  margin-bottom: 1em;
}

li {
  line-height: 1.5;
  margin-bottom: 0.5em;
}

::selection {
  color: black;
  background-color: rgb(180 213 255);
}

hr {
  height: 1px;
  background-color: rgb(var(--color-primary) / 0.25);
  border: none;
  margin: 0 0 1.6rem 0;
}

strong {
  font-family: var(--bold-font-family);
}

button {
  cursor: pointer;
}

// Fix anchor offset
:target {
  scroll-margin-top: calc(var(--indent) * 0.5);
}

body:has(#header.pinned) :target {
  scroll-margin-top: calc(var(--header-height) + (var(--indent) * 0.5));
}

.cms-editor-active .missing-component {
  display: block;
}

.missing-component {
  display: block;
  background-color: #faa;
  padding: 2rem;
  border: 2px solid red;
  margin: 1rem;
}

section {
  background-color: rgb(var(--background-color));
}

:where(a.button) {
  transition: background-color 0.2s ease;

  &:hover {
    background-color: rgb(var(--text-color) / 0.2);
  }
}

.text-content :where(img) {
  max-width: 100%;
}

